sandbox/output
fizzbuzz.c: In function 'fizzBuzz':
fizzbuzz.c:13:5: error: implicit declaration of function 'malloc' [-Werror=implicit-function-declaration]
     char* buf = malloc (30 * sizeof(char));
     ^
fizzbuzz.c:13:17: error: incompatible implicit declaration of built-in function 'malloc' [-Werror]
     char* buf = malloc (30 * sizeof(char));
                 ^
fizzbuzz.c: In function 'fizzBuzzSeq':
fizzbuzz.c:32:18: error: incompatible implicit declaration of built-in function 'malloc' [-Werror]
     char* sbuf = malloc (1000 * sizeof(char));
                  ^
cc1: all warnings being treated as errors
make: *** [test] Error 1
